--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
       <header>
         <h1>Password Generator</h1>
       </header>
+
       <div class="card">
         <div class="card-header">
           <h2>Generate a Password</h2>
         </div>
+
         <div class="card-body">
           <textarea
             readonly
@@ -26,11 +28,15 @@
             aria-label="Generated Password"
           ></textarea>
         </div>
+
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
-      </div>
+       </div>
     </div>
-    <script src="script.js"></script>
+
+    <script src="./assets/script.js"></script>
+
   </body>
+
 </html>
